# ziti-tunnel-sdk-c

./: CMakeLists.txt
.github/actions/openziti-tunnel-build-action/: CODEOWNERS  Dockerfile.local.redhat-7  Dockerfile.local.redhat-8  Dockerfile.local.ubuntu-14.04  Dockerfile.local.ubuntu-16.04  Dockerfile.local.ubuntu-18.04  Dockerfile.local.ubuntu-20.04  Dockerfile.redhat-7  Dockerfile.redhat-8  Dockerfile.ubuntu-14.04  Dockerfile.ubuntu-16.04  Dockerfile.ubuntu-18.04  Dockerfile.ubuntu-20.04
.github/workflows/: cmake.yml
lib/: internal_dns_manager.c  ziti_hosting.c  ziti_tunnel.c
lib/ziti-tunnel/: intercept.c  route.c  tunnel_tcp.c  tunnel_udp.c  ziti_tunnel.c  ziti_tunnel_priv.h
lib/ziti-tunnel-cbs/: ziti_hosting.c  ziti_hosting.h  ziti_tunnel_cbs.c
lib/ziti-tunnel-cbs/include/ziti/: ziti_tunnel_cbs.h
lib/ziti-tunnel/include/ziti/: netif_driver.h  ziti_tunnel.h
programs/ziti-edge-tunnel/: CMakeLists.txt  ziti-edge-tunnel.c
programs/ziti-edge-tunnel/netif_driver/darwin/: utun.c  utun.h
programs/ziti-edge-tunnel/netif_driver/linux/: tun.c
programs/ziti-edge-tunnel/netif_driver/windows/: tun.c
programs/ziti-edge-tunnel/package/: CPackGenConfig.cmake  CPackPackage.cmake  CPackRPMConfig.cmake  RPM_CHANGELOG  post.sh.in  systemd_env.in  ziti-edge-tunnel.service.in  ziti-edge-tunnel.sh.in
programs/ziti-edge-tunnel/package/rpm/: postun.sh.in
programs/ziti-edge-tunnel/package/scripts/: os_release.awk
